Fix collapse

--- a/css/bbgm.css
+++ b/css/bbgm.css
@@ -102,7 +102,6 @@ footer {
 
 /* For the user/login widget */
 .navbar-user {
-  position: relative;
   float: right;
 }
 
